# libbpf-bootstrap

./: .clang-format  .gitignore  .gitmodules  README.md  libbpf
.github/: dependabot.yml
.github/docker/: Dockerfile.ubuntu
.github/workflows/: build-android.yml  build.yml
examples/c/: .gitignore  CMakeLists.txt  Makefile  app.c  app_lib.c  app_lib.h  bootstrap.bpf.c  bootstrap.c  bootstrap.h  bootstrap_legacy.bpf.c  bootstrap_legacy.c  brain.py  fentry.bpf.c  fentry.c  from_source.bpf.c  from_source.c  index.html  kprobe.c  ksyscall.bpf.c  ksyscall.c  lsm.bpf.c  lsm.c  minimal.c  minimal_legacy.bpf.c  minimal_legacy.c  minimal_ns.bpf.c  minimal_ns.c  owner_only.bpf.c  owner_only.c  profile.bpf.c  profile.c  profile.h  server.ts  sim.bpf.c  sim.c  snooper.bpf.c  snooper.c  snooper.h  sockfilter.bpf.c  sockfilter.c  (+22 more)
examples/rust/: Cargo.toml
examples/rust/exitsnoop/: Cargo.toml  build.rs
examples/rust/exitsnoop/src/: main.rs
examples/rust/exitsnoop/src/bpf/: exitsnoop.bpf.c  exitsnoop.h
examples/rust/hashmap/: Cargo.toml  build.rs
examples/rust/hashmap/src/: main.rs
examples/rust/hashmap/src/bpf/: hashmap.bpf.c
examples/rust/hello-world/: Cargo.toml  build.rs
examples/rust/hello-world/src/: main.rs
examples/rust/minimal_ns/: Cargo.toml  build.rs
examples/rust/minimal_ns/src/: main.rs
examples/rust/minimal_ns/src/bpf/: minimal_ns.bpf.c
examples/rust/profile/: Cargo.toml  build.rs
examples/rust/profile/src/: main.rs  syscall.rs
examples/rust/profile/src/bpf/: profile.bpf.c  profile.h
examples/rust/tracecon/: .gitignore  Cargo.toml  README.md  build.rs
examples/rust/tracecon/src/: main.rs
examples/rust/tracecon/src/bpf/: tracecon.bpf.c
examples/rust/unlink/: Cargo.toml  build.rs
examples/rust/unlink/src/: main.rs
examples/rust/unlink/src/bpf/: unlink.bpf.c
examples/rust/xdp/: Cargo.toml  build.rs
examples/rust/xdp/src/: main.rs
examples/rust/xdp/src/bpf/: xdpdrop.bpf.c  xdppass.bpf.c
src/: .gitignore  Makefile  bootstrap.bpf.c  bootstrap.c  bootstrap.h  fentry.bpf.c  fentry.c  kprobe.bpf.c  kprobe.c  minimal.c  usdt
src/xdpdrop/: .gitignore  Cargo.toml
src/xdpdrop/src/: main.rs
src/xdpdrop/src/bpf/: vmlinux.h
tools/: gen_vmlinux_h.sh
tools/cmake/: FindBpfObject.cmake
vmlinux/: vmlinux.h
vmlinux/loongarch/: vmlinux_602.h
vmlinux/powerpc/: vmlinux_600.h
