[package]
name = "minimal_ns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
libc = "0.2"
libbpf-rs = "0.19"
structopt = "0.3"
nix = "0.26.2"

[build-dependencies]
libbpf-cargo = "0.13"
