[package]
name = "profile"
version = "0.1.0"
authors = ["Kuifeng Lee <kuifeng@fb.com>"]
license = "GPL-2.0 OR BSD-3-Clause"

[dependencies]
libbpf-rs = "0.14.0"
nix = "0.24.1"
blazesym = { git = "https://github.com/libbpf/blazesym.git", features = ["cheader"] }
libc = "*"
clap = { version = "3.1.18", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.9.3"
