[package]
name = "tracecon"
version = "0.1.0"
authors = ["Magnus Kulke <mkulke@gmail.com>"]
edition = "2021"
license = "GPL-2.0 OR BSD-3-Clause"
rust-version = "1.71"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.24"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.4"
object = "0.36"
plain = "0.2"

[build-dependencies]
libbpf-cargo = "0.24"
